# Sentry-Bazel-Demo-App

./: .gitignore  AppDelegate.swift  BUILD.bazel  ListViewController.swift  MODULE.bazel  Package.resolved  Package.swift  README.md  build_and_run  swift_deps_index.json
demos/: BasicUIScrollViewController.swift
